--- a/ProjetoHtmlCSS/index.html
+++ b/ProjetoHtmlCSS/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>Teste CSS</h1>
+    <div class="container">
+        <header>
+            <div class="banner">
+                <div class="box-container">
+                    <div class="box-background"></div>
+                    <div class="box-banner-title">
+                        <h1>Agência X</h1>
+                        <p>Desenvolvendo os seus sistemas</p>
+                    </div>
+                </div>
+                <div class="company-info-container">
+                    <div class="company-info-background"></div>
+                    <div class="company-info-titlebox">
+                        <h2>Seja bem-vindo ao nosso site</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
