--- a/ProjetoHtmlCSS/index.html
+++ b/ProjetoHtmlCSS/index.html
@@ -31,6 +31,49 @@
                 </div>
             </div>
         </header>
+        <section>
+            <div class="services-container">
+                <div class="service-box">
+                    <div class="service-title" id="gerenciamento-box">
+                        <p>Gerenciamento de Projetos</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="gerenciamento-title">Lorem Ipsum</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                </div>
+                <div class="service-box">
+                    <div class="service-title" id="dev-box">
+                        <p>Desenvolvimento</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="dev-title">Lorem Ipsum</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                </div>
+                <div class="service-box">
+                    <div class="service-title" id="design-box">
+                        <p>Design UX/UI</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="design-title">Lorem Ipsum</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
