--- a/ProjetoHtmlCSS/index.html
+++ b/ProjetoHtmlCSS/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Institucional</title>
+    <script src="https://kit.fontawesome.com/5db794407c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
@@ -74,6 +75,36 @@
                 </div>
             </div>
         </section>
+        <div class="footer-container">
+            <section>
+                <div class="about-container">
+                    <div class="about-card">
+                        <i class="fas fa-server"></i>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                    <div class="about-card middle-card">
+                        <i class="fas fa-briefcase"></i>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                    <div class="about-card">
+                        <i class="fas fa-tablet-alt"></i>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt
+                            quasi minima nulla culpa maiores fugiat ipsa alias. Repudiandae atque sunt
+                            velit earum, maxime aliquid a excepturi dolores dolorum saepe!
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 </html>
