--- a/Criando Layouts/index.html
+++ b/Criando Layouts/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <div class="container">
+    <!-- Containers -->
+    <div class="container exemplo">
         <h1>Titulo do primeiro container</h1>
         <p>Conteudo do container</p>
         <p>Conteudo do container</p>
@@ -31,6 +32,44 @@
     <div class="container-lg">
         <h1>Titulo container-lg</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum sequi qui, accusantium ipsa repudiandae eveniet in assumenda totam impedit eum eius, incidunt expedita voluptate tempore? Sunt doloribus aperiam quas consectetur.</p>
+    </div>
+
+    <!-- Grids -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>Coluna 1</p>
+            </div>
+            <div class="col">
+                <p>Coluna 2</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Coluna 1</p>
+            </div>
+            <div class="col">
+                <p>Coluna 2</p>
+            </div>
+            <div class="col">
+                <p>Coluna 3</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Coluna 1</p>
+            </div>
+            <div class="col">
+                <p>Coluna 2</p>
+            </div>
+            <div class="col">
+                <p>Coluna 3</p>
+            </div>
+            <div class="col">
+                <p>Coluna 4</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
