Finalizando testes de grid

--- a/Criando Layouts/index.html
+++ b/Criando Layouts/index.html
@@ -37,37 +37,15 @@
     <!-- Grids -->
 
     <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="row row-cols-12 align-items-end">
+            <div class="col-2 order-2">
                 <p>Coluna 1</p>
             </div>
-            <div class="col">
+            <div class="col-6 align-self-center order-3">
                 <p>Coluna 2</p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p>Coluna 1</p>
-            </div>
-            <div class="col">
-                <p>Coluna 2</p>
-            </div>
-            <div class="col">
+            <div class="col-2 align-self-start order-1">
                 <p>Coluna 3</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p>Coluna 1</p>
-            </div>
-            <div class="col">
-                <p>Coluna 2</p>
-            </div>
-            <div class="col">
-                <p>Coluna 3</p>
-            </div>
-            <div class="col">
-                <p>Coluna 4</p>
             </div>
         </div>
     </div>
