--- a/Tarefa 02/index.html
+++ b/Tarefa 02/index.html
@@ -9,6 +9,25 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5">
+            <a href="#" class="navbar-brand">Tarefas bootstrap</a>
+            <div class="container-fluid">
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navgation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="nav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"><a href="../Tarefa 01/index.html" class="nav-link">Tarefa 01</a></li>
+                        <li class="nav-item"><a href="../Tarefa 02/index.html" class="nav-link active" aria-current="page">Tarefa 02</a></li>
+                        <li class="nav-item"><a href="../Tarefa 03/index.html" class="nav-link">Tarefa 03</a></li>
+                        <li class="nav-item"><a href="../Tarefa 04/index.html" class="nav-link">Tarefa 04</a></li>
+                        <li class="nav-item"><a href="../Tarefa 05/index.html" class="nav-link">Tarefa 05</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
         <h1>Bootstrap Icons</h1>
         <div class="row row-cols-12 align-items-center">
