--- a/Tarefa 04/index.html
+++ b/Tarefa 04/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5">
+        <a href="#" class="navbar-brand">Tarefas bootstrap</a>
+        <div class="container-fluid">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navgation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a href="../Tarefa 01/index.html" class="nav-link">Tarefa 01</a></li>
+                    <li class="nav-item"><a href="../Tarefa 02/index.html" class="nav-link">Tarefa 02</a></li>
+                    <li class="nav-item"><a href="../Tarefa 03/index.html" class="nav-link">Tarefa 03</a></li>
+                    <li class="nav-item"><a href="../Tarefa 04/index.html" class="nav-link active" aria-current="page">Tarefa 04</a></li>
+                    <li class="nav-item"><a href="../Tarefa 05/index.html" class="nav-link">Tarefa 05</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header class="container-fluid mb-5">
         <div class="row justify-content-center text-center">
             <h1 class="m-3">Cadastro de Produto</h1>
