--- a/Projeto E-commerce/index.html
+++ b/Projeto E-commerce/index.html
@@ -15,6 +15,327 @@
 
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
+        <div class="container">
+            <a href="#" class="navbar-brand">ExactTime</a>
+            <div id="navbar-items">
+                <div></div>
+                <form class="d-flex" id="search-form">
+                    <i class="bi bi-search primary-color"></i>
+                    <input type="search" class="form-control me-2" placeholder="Busque o seu relógio..." aria-label="search">
+                    <button type="submit" class="btn secondary-bg-color">Pesquisar</button>
+                </form>
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-person"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-heart"></i>
+                        </a>
+                        <span class="qty-info">5</span>
+                    </li>
+                    <li class="nav-item" id="bag-item">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-bag"></i>
+                            <b>R$ 1290,12</b>
+                        </a>
+                        <span class="qty-info">8</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Bottom navbar -->
+    <nav class="navbar navbar-expand-lg secondary-bg-color p-2" id="bottom-navbar-container">
+        <div class="container">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navgation">
+                <i class="bi bi-list"></i>
+            </button>
+            <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Promoções</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contato</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Banners -->
+    <div class="container" id="banners-container">
+        <div class="carousel slide" id="slider" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/banner1.jpg" alt="Banner 1" class="d-block w-100 img-fluid">
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>Relógios de Luxo</h5>
+                        <p>Para você estar pronto em qualquer situação.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/banner3.jpg" alt="Banner 3" class="d-block w-100 img-fluid">
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>Linha Importada</h5>
+                        <p>Conheça os melhores relógios suiços, com pronta entrega.</p>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="carousel-control-prev" data-bs-target="#slider" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button type="button" class="carousel-control-next" data-bs-target="#slider" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="container" id="mini-banners">
+            <div class="row justify-content-around">
+                <div class="col-12 dark-bg-color" id="mini-banner-1">
+                    <h2>Nova Coleção</h2>
+                    <img src="img/relogio1.png" alt="Relógio 1">
+                    <a href="#">Compre Agora</a>
+                </div>
+                <div class="col-12 secondary-bg-color" id="mini-banner-2">
+                    <h2>Promoções</h2>
+                    <img src="img/relogio2.png" alt="Relógio 2">
+                    <a href="#">Compre Agora</a>
+                </div>
+                <div class="col-12 light-bg-color" id="mini-banner-3">
+                    <h2 class="secondary-color">Edição limitada</h2>
+                    <img src="img/relogio3.png" alt="Relógio 3">
+                    <a href="#">Compre Agora</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Best sellers -->
+    <div class="container" id="best-sellers">
+        <h2 class="title primary-color">Best Sellers</h2>
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="img/relogio1.png" alt="Relógio 1" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title light-color">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$ 177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="img/relogio4.png" alt="Relógio 4" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title light-color">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$ 177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="img/relogio5.png" alt="Relógio 5" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title light-color">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$ 177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="img/relogio6.png" alt="Relógio 6" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title light-color">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$ 177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+    <!-- Banner destaque -->
+    <div class="container-fluid" id="bottom-banner">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <p class="primary-color offer-subtitle">Desconto de até 75%</p>
+                <h2 class="light-color">Relógio X</h2>
+                <p class="secondary-color">Presenteie o seu amor com este relógion luxuoso</p>
+                <a href="#" class="btn btn-primary">Comprar Agora</a>
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="img/relogio7.png" alt="Relógio X">
+            </div>
+        </div>
+    </div>
+
+    <!-- Novos Produtos -->
+
+    <div class="container" id="new-products">
+        <h2 class="title primary-color">Novidades</h2>
+        <div class="row">
+            <div class="col-12 col-md-3 d-none d-md-flex" id="new-products-banner">
+                <p class="secondary-color">Os melhores</p>
+                <h3>Relógios</h3>
+                <p class="primary-color">pelos melhores preços</p>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio7.png" alt="Relógio 7" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title light-color">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$ 177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio6.png" alt="Relógio 6" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title light-color">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$ 177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio5.png" alt="Relógio 5" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title light-color">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$ 177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio2.png" alt="Relógio 2" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title light-color">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$ 177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio4.png" alt="Relógio 4" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title light-color">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$ 177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="img/relogio1.png" alt="Relógio 1" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title light-color">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$ 177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Galeria -->
+    <div class="container-fluid" id="gallery">
+        <div class="row">
+            <div class="col-6 col-md-2 image-container" id="insta1"></div>
+            <div class="col-6 col-md-2 image-container" id="insta2"></div>
+            <div class="col-6 col-md-2 image-container" id="insta3"></div>
+            <div class="col-6 col-md-2 image-container" id="insta4"></div>
+            <div class="col-6 col-md-2 image-container" id="insta5"></div>
+            <div class="col-6 col-md-2 image-container" id="insta6"></div>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <footer id="footer">
+        <div class="container-fluid" id="footer-links-container">
+            <div class="row">
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Páginas</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="secondary-color">Home</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Categorias</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Promoções</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 footer-column" id="footer-center">
+                    <h3>ExactTime</h3>
+                    <p class="secondary-color">Algum dúvida? Ligue para nós!</p>
+                    <p class="store-phone"><i class="bi bi-telephone">(50)99999-9999</i></p>
+                </div>
+                <div class="col-12 col-md-4 footer-column">
+                    <h3>Informações</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="secondary-color">Política de Privacidade</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Política de Entrega</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Rastreie o seu Pedido</a></li>
+                    </ul>
+                </div>
+            </div>    
+        </div>
+        <div class="container-fluid" id="newsletter-container">
+            <div class="col-12">
+                <div class="row">
+                    <p class="secondary-color">Se inscreva na nossa Newsletter:</p>
+                    <form class="d-flex" id="news-form">
+                        <i class="bi bi-envelope primary-color"></i>
+                        <input type="email" class="form-control me-2" placeholder="Insira seu e-mail">
+                        <button class="btn secondary-bg-color" type="submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-12" id="social-container">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-youtube"></i>
+                <i class="bi bi-twitter-x"></i>
+            </div>
+        </div>
+        <div class="container" id="copy-container">
+            <p>Todos os direitos reservados @2023 <span class="primary-color">ExactTime</span> - A sua loja de relógios</p>
+        </div>
+    </footer>
 </body>
 </html>
