Corrigindo algumas informações

--- a/Projeto E-commerce/index.html
+++ b/Projeto E-commerce/index.html
@@ -183,7 +183,7 @@
             <div class="col-12 col-md-8">
                 <p class="primary-color offer-subtitle">Desconto de até 75%</p>
                 <h2 class="light-color">Relógio X</h2>
-                <p class="secondary-color">Presenteie o seu amor com este relógion luxuoso</p>
+                <p class="secondary-color">Presenteie o seu amor com este relógio luxuoso</p>
                 <a href="#" class="btn btn-primary">Comprar Agora</a>
             </div>
             <div class="col-12 col-md-4">
@@ -302,7 +302,7 @@
                 </div>
                 <div class="col-12 col-md-4 footer-column" id="footer-center">
                     <h3>ExactTime</h3>
-                    <p class="secondary-color">Algum dúvida? Ligue para nós!</p>
+                    <p class="secondary-color">Alguma dúvida? Ligue para nós!</p>
                     <p class="store-phone"><i class="bi bi-telephone">(50)99999-9999</i></p>
                 </div>
                 <div class="col-12 col-md-4 footer-column">
