--- a/Tarefa 05/index.html
+++ b/Tarefa 05/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row row-cols-4 gy-5">
+        <div class="row row-cols-md-4 row-cols-2 gy-md-5 gy-2">
            <div class="col">
                 <div class="card">
                     <img src="https://via.placeholder.com/500" alt="" class="card-top img-fluid">
